test/files/neg/t6336.check
t6336.scala:3: error: Parameter type in structural refinement may not refer to a user-defined value class
    val a = new { def y[T](x: X[T]) = x.i }
                      ^
one error found
